--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,3 +77,17 @@ header{
     color: white;
   }
 
+  #valorDolarOficialContainer {
+    background-color: #f5f5f5; /* Color de fondo */
+    border: 1px solid #ddd; /* Borde */
+    border-radius: 5px; /* Esquinas redondeadas */
+    padding: 10px; /* Espaciado interno */
+    margin: 0 auto; /* Centrado horizontal */
+    display: inline-block; /* Para que ocupe solo el espacio necesario */
+    font-weight: bold;
+}
+
+#valorDolarOficial {
+    font-weight: bold; /* Texto en negrita */
+    color: #4CAF50; /* Color del texto */
+}
